update: classnames cleanup

--- a/index.html
+++ b/index.html
@@ -8,108 +8,107 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-    <div id="main-container" class="flex-column-centered">
-        <div id="laptop" class="flex-column-centered">
-        <div id="laptop-top" class="flex-column-centered">
-            <div id="laptop-screen">
-                
+    <div class="main-container flex-column-centered">
+        <div class="laptop flex-column-centered">
+        <div class="laptop__top flex-column-centered">
+            <div class="laptop__screen">
                 <form>
-                        >welcome_ <input type="text">
+                    >welcome_ <input type="text">
                 </form>    
             </div>
         </div>
-        <div id="laptop-bottom" class="flex-column-centered">
-            <div id="keyboard-container">
-                <div class="keyboard-row">
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>
-                    <div class="button-xsm"></div>                    
+        <div class="laptop__bottom flex-column-centered">
+            <div class="keyboard">
+                <div class="keyboard__row">
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>
+                    <div class="button--xsm"></div>                    
                 </div>
-                <div class="keyboard-row">
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-med"></div>
+                <div class="keyboard__row">
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--med"></div>
                 </div>
-                <div class="keyboard-row">
-                    <div class="button-med"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
+                <div class="keyboard__row">
+                    <div class="button--med"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
                 </div>
-                <div class="keyboard-row">
-                    <div class="button-large"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-large"></div>
+                <div class="keyboard__row">
+                    <div class="button--large"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--large"></div>
                 </div>
-                <div class="keyboard-row">
-                    <div class="button-xlarge"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-xlarge"></div>
+                <div class="keyboard__row">
+                    <div class="button--xlarge"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--xlarge"></div>
                 </div>
-                <div class="keyboard-row">
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div id="button-space"></div>
-                    <div class="button-sm"></div>
-                    <div class="button-sm"></div>
-                    <div id="arrow-keys">
-                        <div id="arrow-top">
+                <div class="keyboard__row">
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--space"></div>
+                    <div class="button--sm"></div>
+                    <div class="button--sm"></div>
+                    <div class="arrows">
+                        <div class="arrows__top">
                             <div class="button-arrow"></div>
                         </div>
-                        <div id="arrow-bottom">
+                        <div class="arrows__bottom">
                             <div class="button-arrow"></div>
                             <div class="button-arrow"></div>
                             <div class="button-arrow"></div>
@@ -117,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <div id="trackpad"></div>
+            <div class="trackpad"></div>
         </div>
         </div>
     </div>
